1998-08-11  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* misc.h, getopt.c, getopt1.c:
	Include swarmconfig.h instead of config.h.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* argp.h: Only define program_invocation_name and
	program_invocation_short_name in the absence of glibc.

	* argp-parse.c (argp_default_parser): Cast arg as (char *) for
	assignment to program_invocation_name and
	program_invocation_short_name.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* misc.h: Note expectation of atoi, getenv, and qsort getting
	declared by stdlib.h.  Include unistd.h and time.h and note
	purpose.  Declare gettimeofday for cygwin32. 

	* Makefile.am (libmisc_la_LIBADD): Use LIBOBJS instead of MISCOBJS
	(accompanying automake changes).

1998-07-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* realpath.c (realpath): Renamed from myrealpath.

	* misc.h: Include string.h stdlib.h, and config.h.

	* find_executable.c (find_executable): Use realpath instead of 
	myrealpath.

	* Makefile.am (libmisc_la_LIBADD): Set to substituted value
	of MISCOBJS.  Move memchr, memcpy, memset, realpath,
	stpcpy, strchr, strcmp, strdup, strlen, strncmp, strndup, strnlen,
	strpbrk, and strsep from SRC to EXTRA_DIST.

	* misc.h: Declare removed functions above if corresponding HAVE_*
	macro is not defined.  

1998-07-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* find_executable.c, realpath.c: Include misc.h last.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (SRC): Add memcpy.c, memchr.c, strncmp.c, strchr.c,
	and strpbrk.c.
	(noinst_HEADERS): Add mem.h.

	* strndup.c: Don't include stdio.h or sys/types.h.

	* misc.h: Add declaration of memcpy, memchr, strpbrk, strncmp, and
	strlen.
	(__ptr_t): Make it a macro instead of a typedef.

	* memset.c: Include mem.h instead of having local defines.

	* memcpy.c, memchr.c, strlen.c: New files.

	* mem.h: New file (defines common to memset.c and memcpy.c).
